# django-devdata

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
src/devdata/: anonymisers.py  engine.py  exporting.py  extras.py  pii_anonymisation.py  reset_modes.py  settings.py  strategies.py  types.py  utils.py
src/devdata/management/commands/: devdata_dump.py  devdata_export.py  devdata_exporter_process.py  devdata_import.py  devdata_sync.py
tests/: README.md  base.py  conftest.py  factories.py  test_basic.py  test_circular_fk.py  test_fk_restriction.py  test_help.py  test_integration.py  test_sequences_extra.py  test_utils.py  test_works.py  testcases.py  utils.py
tests/test-data-tmp/auth.Permission/: replaced.json
tests/test-data-tmp/contenttypes.ContentType/: replaced.json
tests/test-data-tmp/polls.Choice/: default.json
tests/test-data-tmp/polls.Question/: default.json
tests/test_infrastructure/: __init__.py  base.py  factories.py  utils.py
tests/testcases/: __init__.py  base.py  basic.py
tests/testsite/: manage.py
tests/testsite/photofeed/: models.py
tests/testsite/polls/: models.py
tests/testsite/testsite/: custom_strategies.py
tests/testsite/testsite/settings/: __init__.py  devdata.py  django.py
tests/testsite/turtles/: models.py
