[tool.poetry]
name = "django-devdata"
version = "0.1.5"
description = ""
authors = ["Dan Palmer <dan@danpalmer.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/danpalmer/django-devdata"
keywords = [ "django", "development", "databases" ]
packages = [
    { include = "devdata", from = "src" },
]

# [tool.poetry.dependencies]
# python = ">=3.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-github-actions = "^0.1.0"
pytest = "^6.2.2"
pytest-django = "^4.1.0"
pytest-randomly = "^3.5.0"
tox = "^3.22.0"
tox-gh-actions = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
