[tool.poetry]
name = "django-devdata"
version = "1.0.0"
description = "Django tooling for creating development databases seeded with anonymised production data."
authors = ["Dan Palmer <dan@danpalmer.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/danpalmer/django-devdata"
keywords = [ "django", "development", "databases" ]
packages = [
    { include = "devdata", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8"
tqdm = ">=4.0.0"
Faker = ">=5.0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-github-actions = "^0.1.0"
pytest = "^7.2.1"
pytest-django = "^4.1.0"
pytest-randomly = "^3.5.0"
tox = "^3.22.0"
tox-gh-actions = "^2.4.0"
psycopg2-binary = "^2.8.6"
pytest-check = "^1.0.1"

mypy = "^1.8.0"
types-tqdm = "^4.66.0.20240106"

[tool.poetry.group.dev.dependencies]
tox-pyenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.mypy]
warn_unused_configs = true

# Be fairly strict with our types
strict_optional = true
enable_error_code = "ignore-without-code"
disallow_incomplete_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testsite.settings"
django_find_project = false
pythonpath = ["tests/testsite"]
addopts = ["--no-migrations"]
